# event_detector_db_recording

./: .gitlab-ci.yml  .repos  CITATION.cff  DatabaseInterface_8hpp_source.html  README.md  RecordAllRule_8hpp_source.html  RecordingRule_8hpp_source.html  TemplateRule_8hpp_source.html  annotated.html  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1invalid__iterator-members.html  classdetail_1_1invalid__iterator.html  classdetail_1_1iter__impl-members.html  classdetail_1_1iter__impl.html  classdetail_1_1iteration__proxy-members.html  classdetail_1_1iteration__proxy.html  classdetail_1_1iteration__proxy__value-members.html  classdetail_1_1iteration__proxy__value.html  classdetail_1_1json__ref-members.html  classdetail_1_1json__ref.html  classdetail_1_1json__reverse__iterator-members.html  classdetail_1_1json__reverse__iterator.html  classdetail_1_1json__sax__acceptor-members.html  classdetail_1_1json__sax__acceptor.html  classdetail_1_1json__sax__dom__callback__parser-members.html  classdetail_1_1json__sax__dom__callback__parser.html  classdetail_1_1json__sax__dom__parser-members.html  classdetail_1_1json__sax__dom__parser.html  classdetail_1_1lexer-members.html  classdetail_1_1lexer.html  classdetail_1_1lexer__base-members.html  classdetail_1_1lexer__base.html  classdetail_1_1other__error-members.html  (+276 more)
.github/workflows/: doc.yml  docker-ros.yml
doc/: Doxyfile
docker/: custom.sh
event_detector_db_recording_plugin/: CMakeLists.txt  package.xml  plugins.xml
event_detector_db_recording_plugin/config/: params.yml
event_detector_db_recording_plugin/include/event_detector_db_recording_plugin/: DatabaseInterface.hpp  DatabaseInterface.tpp  RecordingRule.hpp  RecordingRule.tpp  common.hpp  datatypes.hpp  datatypes.macro  toBson.hpp  toBson.tpp
event_detector_db_recording_plugin/include/event_detector_db_recording_plugin/rules/record_all/: README.md  RecordAllRule.hpp
event_detector_db_recording_plugin/include/event_detector_db_recording_plugin/rules/template/: README.md  TemplateRule.hpp
event_detector_db_recording_plugin/launch/: event_detector_db_recording_plugin.launch.py
event_detector_db_recording_plugin/scripts/: README.md  genMsgToBson.py
event_detector_db_recording_plugin/scripts/supported_msgs/: .gitignore  generate.sh
event_detector_db_recording_plugin/src/: DatabaseInterface.cpp  RecordingRule.cpp  toBson.cpp
event_detector_db_recording_plugin/src/rules/record_all/: RecordAllRule.cpp
event_detector_db_recording_plugin/src/rules/template/: TemplateRule.cpp
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  (+29 more)
